Intergration & package add script