@@ -6,12 +6,12 @@ import java.util.Collections;
 public class ArrayListEx1 {
     public static void main(String[] args) {
         ArrayList list1 = new ArrayList(10);
-        list1.add(new Integer(5));
-        list1.add(new Integer(4));
-        list1.add(new Integer(2));
-        list1.add(new Integer(0));
-        list1.add(new Integer(1));
-        list1.add(new Integer(3));
+        list1.add(Integer.valueOf(5));
+        list1.add(Integer.valueOf(4));
+        list1.add(Integer.valueOf(2));
+        list1.add(Integer.valueOf(0));
+        list1.add(Integer.valueOf(1));
+        list1.add(Integer.valueOf(3));
 
         ArrayList list2 = new ArrayList(list1.subList(1, 4));
         print(list1, list2);
@@ -43,7 +43,7 @@ public class ArrayListEx1 {
         print(list1, list2);
     }
 
-    static void print(ArrayList list1 ,ArrayList list2) {
+    static void print(ArrayList list1, ArrayList list2) {
         System.out.println("list1: " + list1);
         System.out.println("list2: " + list2);
         System.out.println();
