@@ -13,9 +13,9 @@ public class HashMapEx4 {
         for (int i = 0; i < data.length; i++) {
             if (map.containsKey(data[i])) {
                 Integer value = (Integer) map.get(data[i]);
-                map.put(data[i], new Integer(value.intValue() + 1));
+                map.put(data[i], Integer.valueOf(value.intValue() + 1));
             } else {
-                map.put(data[i], new Integer(1));
+                map.put(data[i], Integer.valueOf(1));
             }
         }
 
