@@ -8,9 +8,9 @@ public class TreeSetEx2 {
         int[] score = {80, 95, 50, 35, 45, 65, 10, 100};
 
         for (int i = 0; i < score.length; i++)
-            set.add(new Integer(score[i]));
+            set.add(Integer.valueOf(score[i]));
 
-        System.out.println("50보다 작은 값 : " + set.headSet(new Integer(50)));
+        System.out.println("50보다 작은 값 : " + set.headSet(Integer.valueOf(50)));
         System.out.println("50보다 큰 값 : " + set.tailSet(50));
     }
 }
